# KohakuCaption

./: .gitignore  README.md  pyproject.toml
examples/: caption_batch_local.py  caption_local.py  caption_single_image.py  tag_batch.py  tag_single_image.py  tag_single_image_animetimm.py
scripts/: batch_caption.py  batch_caption_local.py  batch_tag_hf.py  download_images.py  download_pixai_tagger.py  fix_scores.py  imagenet_captioning.py  imagenet_tagging.py  shard_imagenet_by_class.py  shard_imagenet_by_split.py  validate_results.py
src/kohakucaption/: __init__.py  tokenizer.py  types.py
src/kohakucaption/clients/: __init__.py  base.py  openai.py  openrouter.py
src/kohakucaption/context/: __init__.py  providers.py  template.py
src/kohakucaption/formats/: __init__.py  base.py  default.py  json.py  state_machine.py
src/kohakucaption/local/: __init__.py  base.py  lmdeploy.py  preprocess.py  vllm.py
src/kohakucaption/pipeline/: __init__.py  caption.py
src/kohakucaption/tagger/: __init__.py  animetimm.py  pixai.py
src/kohakucaption/validation/: __init__.py  validators.py
